fixed padding on small screens

--- a/src/styles/components/gamePanel.scss
+++ b/src/styles/components/gamePanel.scss
@@ -4,6 +4,13 @@ main.games {
 }
 
 .img-container {
+
+  @media (min-width: $medium) {
+    padding-inline: 1.5em;
+  }
+  @media (min-width: $large) {
+    padding-inline: 3em;
+  }
   width: 100%;
   display: grid;
   gap: 1.4em;
@@ -11,7 +18,7 @@ main.games {
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   grid-auto-rows: 300px;
   overflow-y: hidden;
-  padding: 3em;
+  padding-inline: 1em;
   padding-top: 7em;
   .panel {
     margin: 0;
